modify filtering to query params
